Resolve Contract Name without address - require fix on truffle-default-builder

--- a/EthereumDApp/app/index.html
+++ b/EthereumDApp/app/index.html
@@ -15,7 +15,7 @@
     <h1 class="title-title">Ancrez votre passage dans une blockchain ! </h1>
     <div class="row head">
       <div class="col-md-4 head-logo">
-        <img class="img" src="https://www.microsoft.com/france/images/worker/newsletter/fy17/msdn/experiences/white.png" alt="Logo">
+          <img src="img/cloud.png" alt="Blockchain" height="110">
         <img src="img/logo.png" alt="Logo">
       </div>
       <div class="col-md-4 head-checkpoint head-list">
@@ -92,6 +92,12 @@
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="bower_components/mustache.js/mustache.js"></script>
   <script type="text/javascript" src="js/qcode-decoder.min.js"></script>
+
+  <script type="text/javascript" src="bower_components/web3/dist/web3.min.js"></script>
+  <script type="text/javascript" src="bower_components/ethjs-abi/dist/ethjs-abi.min.js"></script>
+
+  <script type="text/javascript" src="bower_components/truffle-contract/dist/truffle-contract.min.js"></script>
+
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
