--- a/EthereumDApp/app/index.html
+++ b/EthereumDApp/app/index.html
@@ -94,9 +94,9 @@
   <script type="text/javascript" src="js/qcode-decoder.min.js"></script>
 
   <script type="text/javascript" src="bower_components/web3/dist/web3.min.js"></script>
-  <script type="text/javascript" src="bower_components/ethjs-abi/dist/ethjs-abi.min.js"></script>
-
-  <script type="text/javascript" src="bower_components/truffle-contract/dist/truffle-contract.min.js"></script>
+  
+  <!-- <script type="text/javascript" src="bower_components/ethjs-abi/dist/ethjs-abi.min.js"></script>
+  <script type="text/javascript" src="bower_components/truffle-contract/dist/truffle-contract.min.js"></script> -->
 
   <script type="text/javascript" src="app.js"></script>
 </body>
