--- a/EthereumDApp/app/index.html
+++ b/EthereumDApp/app/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Oss Paris Blockchain</title>
+  <link rel="shortcut icon" href="#">
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="bower_components/animate.css/animate.css">
   <!-- <link rel="stylesheet" href="http://bootswatch.com/cosmo/bootstrap.css"> -->
